--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "core-js": "^3.4.7",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.1",
+    "precss": "^4.0.0",
     "regenerator-runtime": "^0.13.3",
     "sass": "^1.26.3"
   }
