--- a/movie-search/package.json
+++ b/movie-search/package.json
@@ -19,46 +19,37 @@
     "url": "git+https://github.com/Net-zen/webpack-boilerplate.git"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
-    "autoprefixer": "^9.6.1",
-    "babel-loader": "^8.0.6",
-    "copy-webpack-plugin": "^5.0.5",
-    "css-loader": "^3.2.0",
-    "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.10",
-    "del-cli": "^3.0.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-import": "^2.20.1",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.0",
-    "file-loader": "^4.2.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^6.0.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.13.1",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.0.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2"
+    "@babel/core": "7.6.0",
+    "@babel/preset-env": "7.6.0",
+    "autoprefixer": "9.6.1",
+    "babel-loader": "8.0.6",
+    "copy-webpack-plugin": "5.0.5",
+    "css-loader": "3.2.0",
+    "css-mqpacker": "7.0.0",
+    "cssnano": "4.1.10",
+    "del-cli": "3.0.0",
+    "file-loader": "4.2.0",
+    "html-loader": "0.5.5",
+    "html-webpack-plugin": "3.2.0",
+    "image-webpack-loader": "6.0.0",
+    "mini-css-extract-plugin": "0.8.0",
+    "node-sass": "4.13.1",
+    "postcss-loader": "3.0.0",
+    "sass-loader": "8.0.2",
+    "style-loader": "1.0.0",
+    "uglifyjs-webpack-plugin": "2.2.0",
+    "webpack": "4.41.2",
+    "webpack-cli": "3.3.9",
+    "webpack-dev-server": "3.8.2"
   },
   "dependencies": {
-    "bootstrap": "^4.4.1",
-    "core-js": "^3.4.7",
-    "jquery": "^3.4.1",
-    "popper.js": "^1.16.1",
-    "precss": "^4.0.0",
-    "regenerator-runtime": "^0.13.3",
-    "sass": "^1.26.3",
-    "swiper": "^5.3.8"
+    "bootstrap": "4.4.1",
+    "core-js": "3.4.7",
+    "jquery": "3.4.1",
+    "popper.js": "1.16.1",
+    "precss": "4.0.0",
+    "regenerator-runtime": "0.13.3",
+    "sass": "1.26.3",
+    "swiper": "5.3.8"
   }
 }
