--- a/movie-search/package.json
+++ b/movie-search/package.json
@@ -10,7 +10,8 @@
     "dev": "webpack-dev-server --mode development --history-api-fallback --inline --open --watch",
     "build": "npm run clear -s && webpack --mode production",
     "lint": "eslint src/",
-    "clear": "del-cli dist"
+    "clear": "del-cli dist",
+    "test": "jest"
   },
   "author": "Netizen",
   "license": "ISC",
@@ -32,6 +33,8 @@
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
     "image-webpack-loader": "6.0.0",
+    "ject": "1.1.0",
+    "jest": "26.0.1",
     "mini-css-extract-plugin": "0.8.0",
     "node-sass": "4.13.1",
     "postcss-loader": "3.0.0",
