--- a/movie-search/package.json
+++ b/movie-search/package.json
@@ -29,6 +29,11 @@
     "css-mqpacker": "7.0.0",
     "cssnano": "4.1.10",
     "del-cli": "3.0.0",
+    "eslint": "6.6.0",
+    "eslint-config-airbnb-base": "14.0.0",
+    "eslint-config-prettier": "6.5.0",
+    "eslint-loader": "3.0.2",
+    "eslint-plugin-import": "2.18.2",
     "file-loader": "4.2.0",
     "html-loader": "0.5.5",
     "html-webpack-plugin": "3.2.0",
@@ -37,21 +42,21 @@
     "mini-css-extract-plugin": "0.8.0",
     "node-sass": "4.13.1",
     "postcss-loader": "3.0.0",
+    "precss": "4.0.0",
+    "sass": "1.26.3",
     "sass-loader": "8.0.2",
     "style-loader": "1.0.0",
     "uglifyjs-webpack-plugin": "2.2.0",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.9",
-    "webpack-dev-server": "3.8.2"
+    "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
     "bootstrap": "4.4.1",
     "core-js": "3.4.7",
     "jquery": "3.4.1",
     "popper.js": "1.16.1",
-    "precss": "4.0.0",
     "regenerator-runtime": "0.13.3",
-    "sass": "1.26.3",
     "swiper": "5.3.8"
   }
 }
