--- a/fancy-weather/package.json
+++ b/fancy-weather/package.json
@@ -1,61 +1,34 @@
 {
-  "name": "webpack-boilerplate",
-  "version": "1.0.1",
-  "description": "WebPack: HTML, CSS, SCSS, JS, Img, Fonts",
-  "main": "",
-  "browserslist": [
-    "> 0.25%, not dead"
-  ],
-  "scripts": {
-    "dev": "webpack-dev-server --mode development --history-api-fallback --inline --open --watch",
-    "build": "npm run clear -s && webpack --mode production",
-    "lint": "eslint src/",
-    "clear": "del-cli dist",
-    "test": "jest"
-  },
-  "author": "Netizen",
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Net-zen/webpack-boilerplate.git"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@babel/preset-env": "^7.6.0",
-    "autoprefixer": "^9.6.1",
-    "babel-loader": "^8.0.6",
-    "copy-webpack-plugin": "^5.0.5",
-    "css-loader": "^3.2.0",
-    "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.10",
-    "del-cli": "^3.0.0",
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-loader": "^3.0.2",
-    "eslint-plugin-import": "^2.18.2",
-    "file-loader": "^4.2.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
-    "image-webpack-loader": "^6.0.0",
-    "jest": "^26.0.1",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.13.1",
-    "postcss-loader": "^3.0.0",
-    "precss": "^4.0.0",
-    "sass": "^1.26.3",
-    "sass-loader": "^8.0.2",
-    "style-loader": "^1.0.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.11.0"
-  },
+  "name": "fancy-weather",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "bootstrap": "^4.4.1",
-    "core-js": "^3.4.7",
-    "jquery": "^3.4.1",
-    "popper.js": "^1.16.1",
-    "regenerator-runtime": "^0.13.3"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
