--- a/fancy-weather/package.json
+++ b/fancy-weather/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
+    "bootstrap-4-react": "0.0.59",
     "mapbox-gl": "^1.10.1",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
