--- a/fancy-weather/.editorconfig
+++ b/fancy-weather/.editorconfig
@@ -4,7 +4,7 @@ root = true
 # Для всех файлов используем unix-совместимые переносы строк
 [*]
 end_of_line = lf
-insert_final_newline = true
+#insert_final_newline = true
 
 # Используем табы для отступов 
 [*.js]
